--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
       <h2>Lorem ipsum dolor sit amet <br>consectetur udffd.</h2>
     </div>
     <div class="banner_btn">
-      <a href=""><img src="/image/banner_playstore_cta.png" alt=""></a>
-      <a href=""> <img src="/image/banner_appstore_cta.png" alt=""> </a>
+      <a href=""><img src="./image/banner_playstore_cta.png" alt=""></a>
+      <a href=""> <img src="./image/banner_appstore_cta.png" alt=""> </a>
     </div>
   </div>
 
@@ -155,7 +155,7 @@
       </div>
       <div class="img2">
         <div class="img_sec">
-          <img src="/image/gallery_img2.jpg" alt="">
+          <img src="./image/gallery_img2.jpg" alt="">
         </div>
         <div class="text_sec">
           <h1>Lorem ipsum</h1>
@@ -168,7 +168,7 @@
     <div class="lower_img">
       <div class="lower_img1">
         <div class="img_sec">
-          <img src="/image/gallery_lower_img1.jpg" alt="">
+          <img src="./image/gallery_lower_img1.jpg" alt="">
         </div>
         <div class="lower_img1_text_sec">
           <h1>Lorem ipsum</h1>
@@ -226,7 +226,7 @@
     </div>
     <div class="footer_logo">
       <div class="f_logo">
-        <img src="/image/logo.png" alt="">
+        <img src="./image/logo.png" alt="">
       </div>
       <div class="social_media">
         <p>Connect With Us</p>
